@@ -107,15 +107,16 @@ class Profiling(zope.testrunner.feature.Feature):
     def global_setup(self):
         self.prof_prefix = 'tests_profile.'
         self.prof_suffix = '.prof'
-        self.prof_glob = self.prof_prefix + '*' + self.prof_suffix
+        self.prof_glob = os.path.join(self.runner.options.prof_dir,
+                                      self.prof_prefix + '*' + self.prof_suffix)
         # if we are going to be profiling, and this isn't a subprocess,
         # clean up any stale results files
         if not self.runner.options.resume_layer:
             for file_name in glob.glob(self.prof_glob):
                 os.unlink(file_name)
         # set up the output file
-        self.oshandle, self.file_path = tempfile.mkstemp(self.prof_suffix,
-                                                         self.prof_prefix, '.')
+        self.oshandle, self.file_path = tempfile.mkstemp(
+            self.prof_suffix, self.prof_prefix, self.runner.options.prof_dir)
         self.profiler = available_profilers[self.runner.options.profile](self.file_path)
 
         # Need to do this rebinding to support the stack-frame annoyance with
